SFDC Automation/src/objects/RSM_Pre_Launch_Checklist__c.object
<CustomObject>
    <description>This object stores the values for the pre launch checklist.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RSM Pre Launch Checklists</relationshipLabel>
        <relationshipName>RSM_Pre_Launch_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of the checklist</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>RSM Pre Launch Checklist</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>RSM Pre Launch Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSM Pre Launch Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>